--- a/index.Rmd
+++ b/index.Rmd
@@ -27,7 +27,6 @@ output:
 ```{r child = "chapter3.Rmd"}
 ```
 
-
 ***
 
 ```{r child = "chapter4.Rmd"}
@@ -36,6 +35,11 @@ output:
 ***
 
 ```{r child = "chapter5.Rmd"}
+```
+
+***
+
+```{r child = "chapter6.Rmd"}
 ```
 
 ***
