--- a/chapter6.Rmd
+++ b/chapter6.Rmd
@@ -19,7 +19,7 @@ library(MASS)
 library(GGally)
 ```
 
-I have completed the data wrangling exercise elsewhere, and I'll read the resultant data from those into two data frames, `RATS` and `BPRS` (note that despite their names here, they are the long forms of the data, or RATSL and BPRSL in the data wrangling exercise). RATS is a data set which describes how rats grow on different diets; BPRS evaluates patients' scale of schizophrenia over time when subjected to different treatment.
+I have completed the data wrangling exercise elsewhere (see the data folder at my GitHub), and I'll read the resultant data from those into two data frames (I have saved each as a separate .csv file), `RATS` and `BPRS` (note that despite their names here, they are the long forms of the data, or RATSL and BPRSL in the data wrangling exercise). RATS is a data set which describes how rats grow on different diets; BPRS evaluates patients' scale of schizophrenia over time when subjected to different treatment.
 
 The data are structured as follows:
 
@@ -51,7 +51,7 @@ ggplot(RATS, aes(x = Time, y = Weight, linetype = ID)) +
 
 ```
 
-From this graph it particularly seems like Group 1 differs from the others: Their weight starts lower (intercept) and continues to track lower than with the other groups. Also noticable already is that the individuals with significantly lower or higher weight at the beginning maintain their relative weight to others (Group 2 has one clear outlier above every other individual, Group 1 and 3 have one individual who drags below the others). This phenomenon is generally called "tracking" in longitudinal data-analysis. Sometimes, standardization of data is used to highlight the tracking effect. Therefore, I will now produce the same graph except with standardized data (Weight - mean(Weight))/sd(Weight)).
+From this graph it particularly seems like Group 1 differs from the others: Their weight starts lower (from the intercept) and continues to track lower than with the other groups. Also noticable already is that the individuals with significantly lower or higher weight at the beginning maintain their relative weight to others (Group 2 has one clear outlier above every other individual, Group 1 and 3 have one individual who drags below the others). This phenomenon is generally called "tracking" in longitudinal data-analysis. Sometimes, standardization of data is used to highlight the tracking effect. Therefore, I will now produce the same graph except with standardized data (Weight - mean(Weight))/sd(Weight)).
 
 ```{r, echo = FALSE}
 RATSSTD <- RATS %>%
@@ -82,7 +82,7 @@ glimpse(RATSS)
 
 ```
 
-With the summary datam, I can draw this nice plot which displays the mean of each group over time, with the error bars displaying the standard error (or the estimate of standard deviation of its sampling distribution). 
+With the summary data, I can draw this nice plot which displays the mean of each group over time, with the error bars displaying the standard error (or the estimate of standard deviation of its sampling distribution). 
 
 ```{r, echo = FALSE}
 ggplot(RATSS, aes(x = Time, y = mean, linetype = Group, shape = Group)) +
@@ -93,7 +93,7 @@ ggplot(RATSS, aes(x = Time, y = mean, linetype = Group, shape = Group)) +
   geom_errorbar(aes(ymin = mean - se, ymax = mean + se, linetype="1"), width=0.3) +
   scale_y_continuous(name = "mean(Weight) +/- se(Weight)")
 ```
-This visualization helps us summarize much of the noisy original data into a more coherent picture. As it seems, the mean line of Group 1 drags considerably below the others, whereas Group 2 has a higher mean over time and Group 3 the highest. The Groups all seem to steadily grow in weight over time (or in other words, if we were to draw a regression line through them, the slope would be more or less the same).
+This visualization helps us summarize much of the noisy original data into a more coherent picture. As it seems, the mean line of Group 1 drags considerably below the others, whereas Group 2 has a higher mean over time and Group 3 the highest. The Groups all seem to steadily grow in weight over time (or in other words, if we were to draw a regression line through them, the slope would be more or less the same). Group 1 has the least variance and Group 2 the most.
 
 However, as I pointed out above, we do have some outliers in this data. So let's spot them and get rid of them. With the summarized data, I'll now draw two boxplots: one with all the data and one with the most significant outlier removed:
 ```{r, echo = FALSE}
@@ -151,6 +151,11 @@ Firstly, a quick look at the structure of the data:
 ```{r, echo = FALSE}
 str(BPRS)
 
+BPRS1 <- filter(BPRS, treatment == 1)
+BPRS2 <- filter(BPRS, treatment == 2)
+BPRS2$subject <- BPRS2$subject + 20
+BPRS <- rbind(BPRS1,BPRS2)
+
 BPRS$treatment <- factor(BPRS$treatment)
 BPRS$subject <- factor(BPRS$subject)
 ```
@@ -183,7 +188,7 @@ summary(BPRS_reg)
 
 It seems like `week` is a significant predictor of the data, but treatment isn't. In other words, the bprs scores develop in time (the slope is negative), but the treatment does not play a significant effect in this. There's no reason to take this analysis further, though, as we know that it's assumptions are flawed.
 
-So instead, I will not move on to mixed effect models, and firstly to a random intercept model. In a random intercepts model, the intercepts are allowed to vary and therefore each individual will have a unique intercept. Whilst the intercept is allowed to vary, the slope is not. Therefore, the model assumes that slopes are fixed. I continue to use the same explanatory variables (week and treatment).
+So instead, I will not move on to linear mixed effect models, and firstly to a random intercept model. In a random intercepts model, the intercepts are allowed to vary and therefore each individual will have a unique intercept. Whilst the intercept is allowed to vary, the slope is not. Therefore, the model assumes that slopes are fixed. I continue to use the same explanatory variables (week and treatment).
 
 ```{r, echo = FALSE}
 # access library lme4
@@ -195,7 +200,7 @@ BPRS_ref <- lmer(bprs ~ week + treatment + (1 | subject), data = BPRS, REML = FA
 summary(BPRS_ref)
 ```
 
-Between the subjects, at the intercept, the variance is ~47 bprs points, and the standard deviation is ~7. It seems like the individual subject score seems to explain quite a bit of the variance here, although the residual (the unexplained error) is still quite big (variance 104)! So the model here isn't exactly doing a great job, but it's starting to explain some of the individual-level trends in the data. It's also useful to have a look at the AIC or Akaike Information Criterion here: AIC quantifies the expected data loss of a model and is useful in model comparison. It's some quite tricky information-theoretical stuff, but the AIC here is about 2749. This will be useful when considering the other following models.
+Between the subjects, at the intercept, the variance is ~47 bprs points, and the standard deviation is ~7. It seems like the individual subject score seems to explain quite a bit of the variance here, although the residual (the unexplained error) is still quite big (variance is 104)! So the model here isn't exactly doing a great job, but it's starting to explain some of the individual-level trends in the data. It's also useful to have a look at the AIC or Akaike Information Criterion here: AIC quantifies the expected data loss of a model and is useful in model comparison. It's some quite tricky information-theoretical stuff, but the AIC here is about 2749. This will be useful when considering the other following models.
 
 
 Next up, a random intercept and slope model. This is otherwise same as the model above, except now we allow every individual to have a unique slope as well. 
@@ -207,7 +212,7 @@ BPRS_ref1 <- lmer(bprs ~ week + treatment + (week | subject), data = BPRS, REML 
 summary(BPRS_ref1)
 ```
 
-It seems like this model isn't doing a whole lot better than the previous one, although it is does a slighly better job at explaining individual level variance (65) and reduces the unexplained residual (error) of the model (which is now 97.4). AIC is ever so slightly lower (2745), which suggests that the information loss is a bit lower with this than the previous model. But all in all, adding a random slope has not greatly improved the model, in my opinion.
+It seems like this model isn't doing a whole lot better than the previous one, although it is does a slighly better job at explaining individual level variance (65) and reduces the unexplained residual (error) of the model (which is now 97.4). AIC is ever so slightly lower (2745), which suggests that the information loss is a bit lower with this than the previous model. But all in all, adding a random slope has not greatly improved the model.
 
 Let's continue to perform an ANOVA test on the two models we made above:
 ```{r, echo = FALSE} 
@@ -242,7 +247,7 @@ ggplot(BPRS, aes(x = week, y = bprs, linetype = subject)) +
 # Create a vector of the fitted values
 Fitted <- fitted(BPRS_ref1)
 
-# Create a new column fitted to RATSL
+# Create a new column fitted to BPRS
 BPRS <- BPRS %>%
   mutate(Fitted)
 
@@ -254,4 +259,6 @@ ggplot(BPRS, aes(x = week, y = Fitted, linetype = subject)) +
   scale_y_continuous(limits = c(min(BPRS$bprs), max(BPRS$bprs)))
 ```
 
-With the Fitted model, it seems a lot more clear to identify some general underlying trends. 
+With the Fitted model, it seems a lot more clear to identify some general underlying trends and, importantly, it's possible to make predictions. As before, the higher tracking individual in treatment 2 clearly stands out. But that's all for now.
+
+Well, that was quite a lot of work! It's been an enjoyable course, hopefully you enjoyed the read :-)
